--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.1
   font_awesome_flutter: '>= 4.7.0'
+  intl: ^0.19.0
 
 
 
@@ -67,6 +68,7 @@ flutter:
     - assets/images/logomgreen.png
     - assets/images/mgreen-icon.jpg
     - assets/images/homepage-slideshow.jpg
+    - assets/images/user-logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
