--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ flutter:
     - assets/images/mgreen-icon.jpg
     - assets/images/homepage-slideshow.jpg
     - assets/images/user-logo.png
+    - assets/images/homepage-slideshow1.jpg
+    - assets/images/cashless-payment.png
+    - assets/images/shopping-cart.png
+    - assets/images/Shopee-logo.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
