update home screen

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -16,6 +16,8 @@ pluginManagement {
     }
 }
 
+//rootProject.name = "root-project"
+
 include ":app"
 
 apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
