--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   connection_standard_package: ^0.0.4
   webview_flutter: ^4.4.3
   http: ^1.2.1
+  flutter_secure_storage: ^9.0.0
 
 
 
